@@ -1,0 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!--
+    Wenzhou TKB Control System TZ69 Smart energy plug in switch
+    http://products.z-wavealliance.org/ProductManual/File?folder=&filename=Manuals/1665/TZ69%20english%20manual.pdf
+    -->
+
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="list" genre="config" instance="1" index="1" label="LED-Behaviour" value="0" size="1">
+            <Help>Defines the behavior of the LED.</Help>
+            <Item label="Indicator Off" value="0"/>
+            <Item label="Indicator On" value="1"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="2" label="Memory function" value="0" size="1">
+            <Help></Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="3" label="Watt meter report period" min="1" max="32767" units="5 sec" value="720">
+            <Help>If the setting is configured for 1 hour (value=720), the TZ69E will report its instant power consumption every 1 hour.</Help>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="4" label="kWh meter report period" min="1" max="32767" units="10 min" value="6">
+            <Help>If the setting is configured for 1 hour (value=6), the TZ69E will report its accumulated power consumption (kWh) every 1 hour.</Help>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="5" label="Threshold of Kwh for Load Caution" min="1" max="10000" units="Kwh" value="10000">
+            <Help></Help>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="6" label="Threshold of Watt for Load Caution" min="10" max="3000" units="Watt" value="3000">
+            <Help></Help>
+        </Value>
+    </CommandClass>
+
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="1">
+            <Group index="1" max_associations="5" label="Lifeline" />
+        </Associations>
+    </CommandClass>
+
+</Product>
