@@ -326,6 +326,7 @@ DISTFILES =	.gitignore \
 	config/wenzhou/tz66d.xml \
 	config/wenzhou/tz67.xml \
 	config/wenzhou/tz68.xml \
+	config/wenzhou/tz69.xml \
 	config/wenzhou/tz88.xml \
 	config/widom/UBS104.xml \
 	config/widom/UME304C_S.xml \
